<resources>
    <string name="app_name">Movie DB</string>

    <string name="title_main">Main</string>
    <string name="title_review">Review</string>
    <string name="filter_title_label">Title</string>
    <string name="filter_genre_label">Genre</string>
    <string name="filter_release_date_label">Release date</string>
    <string name="add_review">Add review</string>
    <string name="release_date">Release date: %1$s</string>
    <string name="unknown">unknown</string>
    <string name="retry">Retry</string>
    <string name="rating">Rating</string>
    <string name="current_year">Released this year</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_movie_by_title">Search movie by title</string>

    <!-- Errors -->
    <string name="error_general">Something went wrong. Please try again later</string>
    <string name="error_no_internet">Please check your internet connection and try again</string>
    <string name="error_http">This is an HTTP error</string>
    <string name="remove_filters">Remove filters</string>
</resources>
